--- a/BeFourAfter/pom.xml
+++ b/BeFourAfter/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.gura</groupId>
-	<artifactId>lug</artifactId>
-	<name>BeFourAfter</name>
+	<artifactId>step04</artifactId>
+	<name>Step04_Final</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
@@ -115,7 +115,7 @@
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
-		</dependency>      
+		</dependency>  
 		<!-- 추가 의존 라이브러리 -->
 		<!-- MyBatis 라이브러리 -->
 	  	<dependency>
@@ -140,7 +140,7 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
-		<dependency>
+	  	<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
@@ -179,11 +179,7 @@
 		    <groupId>com.oracle.database.jdbc</groupId>
 		    <artifactId>ojdbc8</artifactId>
 		    <version>21.1.0.0</version>
-		</dependency>
-		
-		
-		
-		  
+		</dependency>      
 	</dependencies>
     <build>
         <plugins>
